--- a/templates/home.html
+++ b/templates/home.html
@@ -1,148 +1,225 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Demo Home</title>
+<!doctype html>
+<html class="no-js" lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Foundation Starter Template</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='/css/foundation.css') }}">
+    
+    <style type="text/css">
+    	.code-block{
+    		left:50%;
+    		right:50%;
 
-		<style type="text/css">
-			.poo{
-				font-size:60px;
-				color:red;
-				text-align: center;
-				text-shadow:black 10px 10px 20px;
+    	}
 
-			}
-			body{
-				background-color:rgb(100,100,255);
-			}
+    	body{
+    		background-color: #A9B2AC;
+    	}
 
-			.explainy{
-				font-size:30px;
-				color:red;
-				text-align: center;
-			}
+    	.red{
+    		color:red;
+    	}
 
-			#paragraphs{
-				padding-left:100px;
-				padding-right:100px;
-				font-size:20px;
-				font-family: Comic Sans MS;
-			}
-			img{
-				width:500px;
-				border-radius:50%;
-			}
+    	td{
+    		text-align: center;
+    		width:50%;
+    		background-color:transparent;
+    	}
+    	table,tbody,tr{
+    		background-color:transparent;
+    		border-color:transparent;
+    	}
+    	.grid-container.fluid{
+    		left:0px;
+    		padding-left:0px;
+    	}
+
+    	.cell{
+    		background-color: #DEF2C8;
+    		border-radius:10px;
+    		padding-top:10px;
+    		height:10%;
+    		padding-bottom:10px;
+    	}
+    	.cell:hover{
+    		background-color: #BCD0C7;
+    		color:white;
+    		transition: 0.4s;
+
+    	}
+
+    	.bingus{
+    		border-radius:10px;
+    		width:100%;
+    	}
+
+    	.accordion-menu{
+    		padding-top:10px;
+    		background-color: #BCD0C7;
+    		height: 100%;
+    		left:0px;
+    		width:23%;
+    		padding-left:0px;
+    		position:fixed;
+    	}
+
+    	.accordion-menu a{
+    		color:black;
+    	}
+
+    	.cell h1{
+    		color:black;
+    	}
+
+    	.small-9{
+    		padding-left:30px;
+    	}
+    </style>
+
+  </head>
+  <body>
+    <script src="https://cdn.jsdelivr.net/npm/foundation-sites@6.9.0/dist/js/foundation.min.js" crossorigin="anonymous"></script>
+
+    <script>
+      $(document).foundation();
+    </script>
+    <div class="grid-container fluid">
+	    <div class="grid-x">
+			  <div class="small-3">
+			  	<ul class="vertical menu accordion-menu" data-accordion-menu>
+					  <li>
+					    <a href="#">Item 1</a>
+					    <ul class="menu vertical nested">
+					      <li><a href="#">Item 1A</a></li>
+					      <li><a href="#">Item 1B</a></li>
+					    </ul>
+					  </li>
+					  <li><a href="#">Item 2</a></li>
+					</ul>
+			  </div>
+			  <div class="small-9">
+
+			  	<h1 style="padding-top:20px">Hello, world!</h1>
+			  	<code class = "code-block">from flask import Flask
+from flask import render_template
+
+app = Flask(__name__)
+app.config["TEMPLATES_AUTO_RELOAD"] = True
+
+
+@app.route("/")
+def hello_world():
+    return render_template('demo.html')
+
+@app.route("/hi")
+def peepee():
+    return render_template('other.html')
+					</code>
 			
-			#inabox{
-				border-radius:0px 500px 0px 500px;
-				background-color: rgba(200,200,200,0.8);
-				padding:50px 50px 50px 50px;
-				padding-top:5%;
-				left:50%;
-				right:10%;
-				position:fixed;
-				top:15%;
-				bottom:15%;
-				z-index:1;
-				height:10%;
-				font-family:Arial;
-				text-align:center;
-			}
 
-			#toolbar{
-				
-				background-color: rgba(200,200,200,0.6);
-				height:50px;
-				position:fixed;
-				border-radius:0px 0px 50px 50px;
-				top:0%;
-				left:10%;
-				right:10%;
-				bottom:10%;
-				text-align:right;
-				padding-right:40px;
-				padding-top:3%;
-				padding-bottom: 3%;
-				font-size:40px;
-
-			}
-			a.button{
-				color:deeppink;
-				text-decoration:none;
-				background-color: rgba(190, 190, 190, 0.8);
-				border-radius:20px;
-				padding:10px;
-			}
-			a.button:hover{
-				color:black;
-				background-color:hotpink;	
-			}
-			a.button:active{
-				color:steelblue;
-				background-color:powderblue;
-			}
-			
-		</style>
-	</head>
-
-	<body>
-		<br id="top"><br><br><br><br><br><br><br><br><br><br>
-		<h1 class="poo" >headers (h1, h2, ...) + paragraph (p)</h1>
-
-		<p class="explainy">
-			&lt;h1&gt;I want to eat pho&lt;/h1&gt;
-			<br> 
-			&lt;p&gt;I want to eat pho&lt;/p&gt;
-		</p>
-
-		<h1>I want to eat pho</h1>
-		<h2>I want to eat pho</h2>
-		<h3>I want to eat pho</h3>
-		<h4>I want to eat pho</h4>
-		<h5>I want to eat pho</h5>
-		<h6>I want to eat pho</h6>
-		<p>I want to eat pho</p>
+    
 
 
+    
 
-		<hr>
+    <table class="unstriped">
+	  <tbody>
+	    <tr>
+		    <td>
+		    	<a href = "/mazegen">
+			      <div class="cell">
+			      	<h1>Maze Generator + Solver</h1>
+			      	<img class="bingus" src="static/bingus.webp">
+			      </div>
+		    	</a>
+		  	</td>
+	      <td>
+	      	<a href = "/snake">
+		      	<div class="cell">
+			      	<h1>Snake</h1>
+			      	<img class="bingus" src="static/bingus.webp">
+			      </div>
+			    </a>
+	      </td>
+	    </tr>
+	    <tr>
+		    <td>
+		      <div class="cell">
+		      	<h1>Project C</h1>
+		      	<img class="bingus" src="static/bingus.webp">
+		      </div>
+		  	</td>
 
-		<h1 class="poo">images (img)</h1>
+	      <td>
+	      	<div class="cell">
+		      	<h1>Project B</h1>
+		      	<img class="bingus" src="static/bingus.webp">
+		      </div>
+	      </td>
+	    </tr>
+	    <tr>
+	      <td>
+	      	<div class="cell">
+		      	<h1>Project F</h1>
+		      	<img class="bingus" src="https://static.wikia.nocookie.net/binguston/images/d/d6/Hqdefault_%283%29.jpg/revision/latest/thumbnail/width/360/height/360?cb=20220827231254">
+		      </div>
+	      </td>
+	      <td>
+	      	<div class="cell">
+		      	<h1>Project B</h1>
+		      	<img class="bingus" src="https://static.wikia.nocookie.net/binguston/images/d/d6/Hqdefault_%283%29.jpg/revision/latest/thumbnail/width/360/height/360?cb=20220827231254">
+		      </div>
+	      </td>
+	    </tr>
+	    <tr>
+		    <td>
+		      <div class="cell">
+		      	<h1>Project A</h1>
+		      	<img class="bingus" src="https://static.wikia.nocookie.net/binguston/images/d/d6/Hqdefault_%283%29.jpg/revision/latest/thumbnail/width/360/height/360?cb=20220827231254">
+		      </div>
+		  	</td>
+	      <td>
+	      	<div class="cell">
+		      	<h1>Project B</h1>
+		      	<img class="bingus" src="https://static.wikia.nocookie.net/binguston/images/d/d6/Hqdefault_%283%29.jpg/revision/latest/thumbnail/width/360/height/360?cb=20220827231254">
+		      </div>
+	      </td>
+	    </tr>
+	    <tr>
+		    <td>
+		      <div class="cell">
+		      	<h1>Project C</h1>
+		      	<img class="bingus" src="https://static.wikia.nocookie.net/binguston/images/d/d6/Hqdefault_%283%29.jpg/revision/latest/thumbnail/width/360/height/360?cb=20220827231254">
+		      </div>
+		  	</td>
+	    </tr>
+	    <tr>
+	      <td>
+	      	<div class="cell">
+		      	<h1>Project F</h1>
+		      	<img class="bingus" src="https://static.wikia.nocookie.net/binguston/images/d/d6/Hqdefault_%283%29.jpg/revision/latest/thumbnail/width/360/height/360?cb=20220827231254">
+		      </div>
+	      </td>
+	      <td>
+	      	<div class="cell">
+		      	<h1>Project B</h1>
+		      	<img class="bingus" src="https://static.wikia.nocookie.net/binguston/images/d/d6/Hqdefault_%283%29.jpg/revision/latest/thumbnail/width/360/height/360?cb=20220827231254">
+		      </div>
+	      </td>
+	    </tr>
 
-		<p class="explainy">&lt;img src="(link)"&gt;</p>
-
-		<marquee><img src="https://media.licdn.com/dms/image/v2/D4E03AQEQxZjC6tcxhw/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1723997812275?e=2147483647&v=beta&t=spgX90ZJVyz7_5EJJlEyeu_MaTPoi9aNTtOYnTN2RoE"></marquee>
-		
-		<div id="toolbar">
-			<a class="button" href="#top">button</a>
-			<a class="button" href="https://2022.igem.wiki/nyc-empire-state/index" target="_blank">gladiators</a>
-
+	  </tbody>
+	  </div>
 		</div>
+	</div>
 
-		<hr>
-
-		<h1 class="poo">links (a + href)</h1>
-
-		<a href=""></a>
-
-		<a href="https://www.google.com/" target="_blank">goggle</a>
-		<br>
-		<a href="hi">other</a>
-
-		<hr>
-
-		<h1 class="poo">ids and classes</h1>
-
-		<a href="#top">go to top</a>
-
-
-		<div id="paragraphs">
-			<p>paragraph 1 words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words</p>
-			<p>paragraph 2  words words words words words words words words words words words words words words words words words words words words words words words words words words</p>
-			<p>paragraph 3 words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words</p>
-			<p>paragraph 4 words words words words words words words words words words words</p>
-		</div>
-		<div style="height:10000px"></div>
-
-
-	</body>
+	  <script src="{{ url_for('static', filename='/js/vendor/jquery.js') }}"></script>
+    <script src="{{ url_for('static', filename='/js/vendor/what-input.js') }}"></script>
+    <script src="{{ url_for('static', filename='/js/vendor/foundation.min.js') }}"></script>
+    <script>
+      $(document).foundation();
+    </script>
+  </body>
 </html>
